[gd_scene load_steps=6 format=3 uid="uid://b4dnm8piv8tvd"]

[ext_resource type="Theme" uid="uid://cn762radik7xw" path="res://assets/themes/default.tres" id="1_6eapn"]
[ext_resource type="Script" path="res://source/scenes/ui/menus/main_menu.gd" id="1_76osk"]
[ext_resource type="Texture2D" uid="uid://bpjgs8vuswnyw" path="res://assets/sprites/wall.png" id="3_0kra6"]
[ext_resource type="PackedScene" path="res://source/scenes/ui/elements/creditsscreen.tscn" id="4_7bjh4"]
[ext_resource type="PackedScene" uid="uid://bj1gpalilav3a" path="res://source/scenes/ui/elements/how_to_play.tscn" id="5_2o6w5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6eapn")
script = ExtResource("1_76osk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 1918.0
offset_bottom = 1083.0
texture = ExtResource("3_0kra6")
expand_mode = 2
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "MÃ¶bius Quest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../ExitGameButton")
focus_neighbor_bottom = NodePath("../HowToPlayButton")
focus_next = NodePath("../HowToPlayButton")
focus_previous = NodePath("../ExitGameButton")
text = "Start Game
"
flat = true

[node name="HowToPlayButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../StartGameButton")
text = "How to Play"
flat = true

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../HowToPlayButton")
focus_neighbor_bottom = NodePath("../ExitGameButton")
focus_next = NodePath("../ExitGameButton")
focus_previous = NodePath("../HowToPlayButton")
text = "Credits"
flat = true

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../CreditsButton")
text = "Exit Game"
flat = true

[node name="CreditsOverlay" parent="." instance=ExtResource("4_7bjh4")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="HowToPlay" parent="." instance=ExtResource("5_2o6w5")]
unique_name_in_owner = true
visible = false
layout_mode = 1
